@@ -6,8 +6,7 @@ module Annotate
     if File.exists?('Rakefile')
       require 'rake'
       load 'Rakefile'
-      # Rails 3 wants to load our .rake files for us.
-      # TODO: selectively do this require on Rails 2.x?
+
       Dir[File.join(File.dirname(__FILE__), 'tasks', '**/*.rake')].each { |rake| load rake }
       return true
     else
