@@ -5,16 +5,17 @@
 #
 #
 # Prepends the output of "rake routes" to the top of your routes.rb file.
-# Yes, it's simple but I'm thick and often need a reminder of what my routes mean.
+# Yes, it's simple but I'm thick and often need a reminder of what my routes
+# mean.
 #
-# Running this task will replace any exising route comment generated by the task.
-# Best to back up your routes file before running:
+# Running this task will replace any exising route comment generated by the
+# task. Best to back up your routes file before running:
 #
 # Author:
 #  Gavin Montague
 #  gavin@leftbrained.co.uk
 #
-# Released under the same license as Ruby. No Support. No Warranty.module AnnotateRoutes
+# Released under the same license as Ruby. No Support. No Warranty.
 #
 module AnnotateRoutes
   PREFIX = "#== Route Map"
